<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/schedule_message"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintBottom_toTopOf="@id/navigation"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lunch_cardview"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/schedule_card_margins"
            android:layout_marginRight="@dimen/schedule_card_margins"
            android:layout_marginTop="@dimen/schedule_card_margins"
            android:layout_marginBottom="@dimen/schedule_card_margins"
            card_view:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lunch_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/schedule_text_margins"
                    android:layout_marginRight="@dimen/schedule_text_margins"
                    android:layout_marginTop="@dimen/schedule_text_margins"
                    android:layout_marginBottom="@dimen/schedule_text_margins"
                    android:text="@string/schedule_lunch"
                    android:textSize="@dimen/schedule_mealtype_textsize"/>

                <TextView
                    android:id="@+id/recipe_name_lunch_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/schedule_text_margins"
                    android:layout_marginRight="@dimen/schedule_text_margins"
                    android:layout_marginTop="@dimen/schedule_text_margins"
                    android:layout_marginBottom="@dimen/schedule_text_margins"
                    android:text="@string/schedule_lunch_recipe_name"
                    android:textSize="@dimen/schedule_recipename_textsize" />

                <TextView
                    android:id="@+id/lunch_time_required_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/schedule_text_margins"
                    android:layout_marginRight="@dimen/schedule_text_margins"
                    android:layout_marginTop="@dimen/schedule_text_margins"
                    android:layout_marginBottom="@dimen/schedule_text_margins"
                    android:text="@string/schedule_lunch_time_required"
                    android:textSize="@dimen/schedule_timereq_textsize"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dinner_cardview"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/schedule_card_margins"
            android:layout_marginRight="@dimen/schedule_card_margins"
            android:layout_marginBottom="@dimen/schedule_card_margins"
            card_view:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/lunch_cardview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dinner_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/schedule_text_margins"
                    android:layout_marginRight="@dimen/schedule_text_margins"
                    android:layout_marginTop="@dimen/schedule_text_margins"
                    android:layout_marginBottom="@dimen/schedule_text_margins"
                    android:text="@string/schedule_dinner"
                    android:textSize="@dimen/schedule_mealtype_textsize"/>

                <TextView
                    android:id="@+id/recipe_name_dinner_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/schedule_text_margins"
                    android:layout_marginRight="@dimen/schedule_text_margins"
                    android:layout_marginTop="@dimen/schedule_text_margins"
                    android:layout_marginBottom="@dimen/schedule_text_margins"
                    android:text="@string/schedule_dinner_recipe_name"
                    android:textSize="@dimen/schedule_recipename_textsize" />

                <TextView
                    android:id="@+id/time_required_dinner_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/schedule_text_margins"
                    android:layout_marginRight="@dimen/schedule_text_margins"
                    android:layout_marginTop="@dimen/schedule_text_margins"
                    android:layout_marginBottom="@dimen/schedule_text_margins"
                    android:text="@string/schedule_dinner_time_required"
                    android:textSize="@dimen/schedule_timereq_textsize"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>